<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/find_order_list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F3F3F6"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_bg"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/article_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="钥匙"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/order_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="进行中"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/sp_15" />

                    <com.dhht.sld.utlis.IconFontView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/icon_back_right"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/sp_10" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_8"
                android:orientation="horizontal">

                <com.dhht.sld.utlis.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dp_6"
                    android:gravity="center_vertical"
                    android:text="@string/icon_time"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/order_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2020年5月20日 10:39:18"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <com.dhht.sld.utlis.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dp_5"
                    android:gravity="center_vertical"
                    android:text="@string/icon_quhuo"
                    android:textColor="@color/green"
                    android:textSize="@dimen/sp_18" />
                <TextView
                    android:id="@+id/order_start_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="贵州省贵阳市观山湖区"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <com.dhht.sld.utlis.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dp_5"
                    android:gravity="center_vertical"
                    android:text="@string/icon_shonghuo"
                    android:textColor="@color/red"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/order_end_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="北京市"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
