<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:id="@+id/system_setting_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rectanglt_radius_selector"
                android:gravity="center_vertical|start">
                <com.dhht.sld.utlis.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_system_clear"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/black"
                    android:focusable="false"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="清理缓存"
                    android:layout_weight="1"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/black"
                    android:focusable="false"/>
                <TextView
                    android:id="@+id/system_setting_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/system_setting_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rectanglt_radius_selector"
                android:gravity="center_vertical|start">
                <com.dhht.sld.utlis.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_system_checkupdate"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/black"
                    android:focusable="false"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="版本更新"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/black"
                    android:fadeScrollbars="false"/>
                <TextView
                    android:id="@+id/system_setting_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:focusable="false"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:id="@+id/system_login_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rectanglt_radius_selector"
                android:gravity="center_vertical|start">
                <com.dhht.sld.utlis.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_system_exit"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_17"
                    android:layout_marginBottom="@dimen/dp_17"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/black"
                    android:focusable="false"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="退出登录"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/black"
                    android:focusable="false"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>