<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appTheme"
            android:minHeight="@dimen/dp_40"
            android:theme="?attr/actionBarTheme"
            app:contentInsetStart="0dp">

            <com.dhht.sld.utlis.IconFontView
                android:id="@+id/toolbar_back"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/dp_14"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/icon_back"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxEms="10"
                android:paddingLeft="-56dp"
                android:text="订单支付"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="支付金额："
                    android:textColor="#ff333333"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/pay_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#ff333333"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_15">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="选择支付方式"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pay_wechat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_15">

                    <com.dhht.sld.utlis.IconFontView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:paddingStart="@dimen/dp_5"
                        android:text="@string/icon_wechat_pay"
                        android:textColor="#1afa29"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:text="微    信"
                        android:textSize="@dimen/sp_14" />

                    <com.dhht.sld.utlis.IconFontView
                        android:id="@+id/pay_checkBox_wechat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:paddingEnd="@dimen/dp_5"
                        android:text="@string/icon_checkbox_pay"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/sp_18" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="@dimen/dp_15"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:background="@color/gray2" />

                <LinearLayout
                    android:id="@+id/pay_zhifubao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_15">

                    <com.dhht.sld.utlis.IconFontView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:paddingStart="@dimen/dp_5"
                        android:text="@string/icon_zhufubao_pay"
                        android:textColor="#1296db"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:text="支付宝"
                        android:textSize="@dimen/sp_14" />

                    <com.dhht.sld.utlis.IconFontView
                        android:id="@+id/pay_checkBox_zhifubao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:paddingEnd="@dimen/dp_5"
                        android:text="@string/icon_checkbox_pay"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/sp_18" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="@dimen/dp_15"
                    android:background="@color/gray2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_15">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/pay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="确认支付"
        app:qmui_radius="4dp"
        app:qmui_backgroundColor="@color/appTheme"
        app:qmui_borderColor="@null"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />
</RelativeLayout>